--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,18 @@
 <resources>
-    <string name="app_name">ContentApp</string>
+    <string name="app_name">Marg POC</string>
     <string name="description_one_piece">\t\tOne Piece (stylized in all caps) is a Japanese manga series written and illustrated by Eiichiro Oda. It has been serialized in Shueisha\'s shōnen manga magazine Weekly Shōnen Jump since July 1997, with its individual chapters compiled into 106 tankōbon volumes as of July 2023. T</string>
     <string name="title_one_piece">One Piece (1999)</string>
     <string name="description_jujutsu">Jujutsu Kaisen is a Japanese manga series written and illustrated by Gege Akutami. It has been serialized in Shueisha\'s shōnen manga magazine Weekly Shōnen Jump since March 2018, with its chapters collected and published in 23 tankōbon volumes as of July 2023.</string>
     <string name="title_demon_slayer">Demon Slayer</string>
     <string name="description_demon_slayer">Demon Slayer: Kimetsu no Yaiba is a Japanese manga series written and illustrated by Koyoharu Gotouge. It was serialized in Shueisha\'s shōnen manga magazine Weekly Shōnen Jump from February 2016 to May 2020, with its chapters collected in 23 tankōbon volumes.</string>
     <string name="title_jujutsu_kaisen">Jujutsu Kaisen</string>
+    <string name="title_ramtek">Ramtek</string>
+    <string name="description_ramtek">Ramtek hosts a historic temple of Rama. It is believed that Ramtek was the place where Rama, the Hindu god, rested while he was in exile, Hence it is named Ramtek. According to Hindu mythology, the ashram of the Hindu sage Agastya was situated close to Ramtek.</string>
+    <string name="youtube_ramtek">8m8hnIWukuA</string>
+    <string name="title_panchavati">Panchavati</string>
+    <string name="description_panchavati">"It was here in the thick forests of Dandakaraya, Panchavati (the land of five Banyan/Peepal trees) on the banks of the sacred river Godavari, where Lord Rama, Sita, and Lakshman had stayed after leaving Chitrakoot (where they spent eleven-and-a-half years). As per Ramayana, Nashik is the location on the banks of the Godavari river where Laxman, by the wish of Rama, cut the nose of the demoness Shurpanakha and thus this city was named \"Nashik\". It is also known by the name Panchavati. "</string>
+    <string name="youtube_panchwati">Suy9ZLZw3EU</string>
+    <string name="youtube_tuljapur">v-8eiNQbD6c</string>
+    <string name="description_tuljapur">According to the epic story, there was a sage \"Kardam\" and his consort \"Anubhuthi\' with an infant, in this area. After his death his wife \"Anubhuthi\" performed a penance for goddess in the name of Bhavani on the banks of the river \"Mandakini\" to look after her child.</string>
+    <string name="title_tuljapur">Tuljapur</string>
 </resources>
